--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.moringaschool.craftypictures.LoginActivity"
-    android:background="@color/colorPrimary">
+    android:background="@color/darkgrey">
 
     <LinearLayout
         android:orientation="vertical"
@@ -27,7 +27,6 @@
             android:padding="10dp"
             android:layout_marginBottom="10dp"
             android:textColor="@android:color/black"
-            android:textColorHint="@color/lighterGrey"
             android:textSize="20sp" />
 
         <EditText
@@ -40,7 +39,6 @@
             android:nextFocusDown="@+id/passwordEditText"
             android:padding="10dp"
             android:textColor="@android:color/black"
-            android:textColorHint="@color/lighterGrey"
             android:textSize="20sp" />
 
 
@@ -50,9 +48,10 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:text="Log in"
-            android:background="@color/colorAccent"
+            android:textSize="20sp"
+            android:background="@color/colorPrimaryDark"
             android:layout_marginTop="15dp"
-            android:textColor="@color/lifhtGrreen" />
+            android:textColor="@color/white" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -70,8 +69,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
-        android:textColor="@color/lightBlue"
+        android:text="Login here"
+        android:textColor="@color/white"
         android:textSize="30dp"
         android:textStyle="bold"
         android:layout_above="@+id/linearLayout"
