--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -5,7 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.moringaschool.craftypictures.CreateAccountActivity"
-    android:background="@color/colorPrimary">
+    android:background="@color/darkgrey">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Create Account"
+        android:textColor="@color/white"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        android:layout_above="@+id/linearLayout"
+        android:layout_centerHorizontal="true" />
 
     <LinearLayout
         android:orientation="vertical"
@@ -26,7 +36,6 @@
             android:padding="10dp"
             android:layout_marginBottom="10dp"
             android:textColor="@android:color/black"
-            android:textColorHint="@color/lighterGrey"
             android:textSize="20sp" />
 
         <EditText
@@ -40,7 +49,6 @@
             android:padding="10dp"
             android:layout_marginBottom="10dp"
             android:textColor="@android:color/black"
-            android:textColorHint="@color/lighterGrey"
             android:textSize="20sp" />
 
         <EditText
@@ -54,7 +62,6 @@
             android:padding="10dp"
             android:layout_marginBottom="10dp"
             android:textColor="@android:color/black"
-            android:textColorHint="@color/lighterGrey"
             android:textSize="20sp" />
 
         <EditText
@@ -68,7 +75,6 @@
             android:padding="10dp"
             android:layout_marginBottom="10dp"
             android:textColor="@android:color/black"
-            android:textColorHint="@color/lighterGrey"
             android:textSize="20sp" />
 
 
@@ -78,9 +84,10 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:text="Sign up"
+            android:textSize="20sp"
             android:background="@color/colorAccent"
             android:layout_marginTop="15dp"
-            android:textColor="@color/lifhtGrreen" />
+            android:textColor="@color/white" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -94,15 +101,5 @@
             android:layout_gravity="center_horizontal" />
 
     </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Create Account"
-        android:textColor="@color/lightBlue"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        android:layout_above="@+id/linearLayout"
-        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
